# strict_result

./: Cargo.toml  README.md  readme.md
examples/: example.rs
src/: lib.rs
