[package]
name = "strict_result"
version = "1.2.0"
edition = "2021"
description = "Adds a `Result::strict()?` function to help with type inference"
authors = ["Kyuuhachi <caagr98@gmail.com>"]
repository = "https://github.com/Kyuuhachi/strict_result"
license = "MIT OR Apache-2.0"
categories = ["no-std"]
